# tinyinst-rs

./: .gitignore  Cargo.toml  Justfile  Makefile.toml  README.md  build.bat  build.rs  build_test.bat  debug.bat  run.bat
.github/workflows/: build_and_test.yml  windows.yml
src/: CMakeLists.txt  aflcov.cpp  aflcov.h  instrumentation.cpp  instrumentation.h  lib.rs  shim.cc  shim.h  tinyinst.rs  tinyinstinstrumentation.cpp  tinyinstinstrumentation.h
test/: CMakeLists.txt  test.c  tinyinst-coverage.cpp
