[package]
name = "tinyinst-rs"
authors = ["biazo <mail@elbiazo.com>", "Dongjia Zhang <toka@aflplus.plus>", "Dominik Maier <domenukk@gmail.com>"]
description = "Rust bindings for googleprojectzero/TinyInst"
repository = "https://github.com/AFLplusplus/tinyinst-rs/"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["bindings", "testing", "security"]
version = "0.1.0"
edition = "2021"
categories = ["development-tools::testing", "os", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0", default-features = false, features = ["alloc"] }

[build-dependencies]
cmake = "0.1"
