[package]
name = "tinyinst"
authors = ["biazo <mail@elbiazo.com>", "Dongjia Zhang <toka@aflplus.plus>", "Dominik Maier <domenukk@gmail.com>"]
description = "Rust bindings for googleprojectzero/TinyInst"
repository = "https://github.com/AFLplusplus/tinyinst-rs/"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["bindings", "testing", "security"]
version = "0.1.1"
edition = "2024"
categories = ["development-tools::testing", "os", "no-std"]

[dependencies]
# When changing this, also change all versions in build_and_test.yml
cxx = { version = "=1.0.190", default-features = false, features = ["alloc"] }

[build-dependencies]
cmake = "0.1.54"
git2 = "0.20.2"
which = "8.0.0"
